spec/.test/config/invalid/extensions.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => 1,
    'tags' => [],
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
